Fixed text alignment mobile

--- a/index.css
+++ b/index.css
@@ -809,6 +809,12 @@ footer {
 		margin-bottom: 0px;
 	}
 
+	.type {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		text-align: center;
+	}
+
 	.description {
 		width: 80%;
 		font-size: 16px;
